welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var T=Array[Color](getMondeHauteur())
                                    ^Array1:9: error: not found: value motif
    peindre(motif)
            ^Array1:14: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var motif=Array[Color](getMondeHauteur())
                                        ^